# betProject

./: .gitignore  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
bet_maker/: Dockerfile  alembic.ini  models.py
bet_maker/app/: api.py  config.py  consumer.py  crud.py  dependencies.py  models.py  run.py  schemas.py
bet_maker/app/data_access/: database.py
bet_maker/app/data_access/migrations/: env.py
bet_maker/app/data_access/migrations/versions/: 209adb9179ab_.py
line_provider/: Dockerfile  entrypoint.sh  requirements.txt
line_provider/app/: api.py  config.py  crud.py  database.py  dependencies.py  producer.py  run.py  schemas.py
line_provider/tests/: test_main.py
