[project]
name = "projectforbet"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[all] (>=0.115.8,<0.116.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "httpx (==0.27.2)",
    "redis (>=5.2.1,<6.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "aiokafka (>=0.12.0,<0.13.0)",
    "kafka-python (>=2.0.3,<3.0.0)",
    "brotli (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
